// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a custom icon modal with an existing icon 1`] = `
<EuiModal
  className="mapsCustomIconModal"
  initialFocus=".mapsCustomIconForm__image"
  maxWidth={700}
  onClose={[Function]}
>
  <EuiModalHeader>
    <EuiModalHeaderTitle
      component="h3"
    >
      Edit custom icon
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiFlexGroup
      alignItems="flexStart"
      gutterSize="m"
      justifyContent="spaceBetween"
    >
      <EuiFlexItem
        className="mapsCustomIconForm"
        grow={2}
      >
        <EuiFormRow
          className="mapsCustomIconForm__image"
          display="rowCompressed"
          error=""
          helpText="SVGs without sharp corners and intricate details work best. Modifying the settings under Advanced options may improve rendering."
          isInvalid={false}
        >
          <EuiFilePickerClass
            accept=".svg"
            className="mapsImageUpload"
            initialPromptText="Select or drag and drop an SVG icon"
            isInvalid={false}
            onChange={[Function]}
            required={true}
          />
        </EuiFormRow>
        <EuiSpacer />
        <EuiFormRow
          display="rowCompressed"
          label="Name"
        >
          <EuiFieldText
            className="mapsCustomIconForm__label"
            data-test-subj="mapsCustomIconForm-label"
            onChange={[Function]}
            required={true}
            value="square"
          />
        </EuiFormRow>
        <EuiSpacer />
        <EuiAccordionClass
          buttonContent="Advanced options"
          id="advancedOptionsAccordion"
          paddingSize="xs"
        >
          <EuiPanel
            color="subdued"
            paddingSize="s"
          >
            <EuiFlexGroup
              gutterSize="xs"
              justifyContent="flexEnd"
            >
              <EuiFlexItem
                grow={false}
              >
                <EuiButtonEmpty
                  onClick={[Function]}
                  size="xs"
                >
                  Reset
                </EuiButtonEmpty>
              </EuiFlexItem>
            </EuiFlexGroup>
            <EuiFormRow
              className="mapsCustomIconForm__cutoff"
              display="rowCompressed"
              label={
                <EuiToolTip
                  content="Adjusts the balance of the signed distance function between the inside (approaching 1) and outside (approaching 0) of the icon."
                  delay="regular"
                  display="inlineBlock"
                  position="top"
                >
                  <React.Fragment>
                    Alpha threshold
                     
                    <EuiIcon
                      color="subdued"
                      type="questionInCircle"
                    />
                  </React.Fragment>
                </EuiToolTip>
              }
            >
              <ValidatedRange
                className="mapsCutoffRange"
                compressed={true}
                max={1}
                min={0}
                onChange={[Function]}
                showInput={true}
                showLabels={true}
                step={0.01}
                value={0.3}
              />
            </EuiFormRow>
            <EuiFormRow
              className="mapsCustomIconForm__radius"
              display="rowCompressed"
              label={
                <EuiToolTip
                  content="Adjusts the size of the signed distance function around the Alpha threshold as a percent of icon size."
                  delay="regular"
                  display="inlineBlock"
                  position="top"
                >
                  <React.Fragment>
                    Radius
                     
                    <EuiIcon
                      color="subdued"
                      type="questionInCircle"
                    />
                  </React.Fragment>
                </EuiToolTip>
              }
            >
              <ValidatedRange
                className="mapsRadiusRange"
                compressed={true}
                max={1}
                min={0}
                onChange={[Function]}
                showInput={true}
                showLabels={true}
                step={0.01}
                value={0.15}
              />
            </EuiFormRow>
          </EuiPanel>
        </EuiAccordionClass>
      </EuiFlexItem>
      <EuiFlexItem
        className="mapsIconPreview__wrapper mapsCustomIconForm__preview"
        grow={false}
      >
        <IconPreview
          cutoff={0.3}
          isSvgInvalid={false}
          radius={0.15}
          svg="<svg width=\\"200\\" height=\\"250\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path stroke=\\"#000\\" fill=\\"transparent\\" stroke-width=\\"5\\" d=\\"M10 10h30v30H10z\\"/></svg>"
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiFlexGroup
      justifyContent="flexEnd"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButtonEmpty
          onClick={[Function]}
        >
          Cancel
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          color="danger"
          data-test-subj="mapsCustomIconForm-submit"
          onClick={[Function]}
        >
          Delete
        </EuiButton>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="mapsCustomIconForm-submit"
          fill={true}
          isDisabled={false}
          onClick={[Function]}
        >
          Save
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalFooter>
</EuiModal>
`;

exports[`should render an empty custom icon modal 1`] = `
<EuiModal
  className="mapsCustomIconModal"
  initialFocus=".mapsCustomIconForm__image"
  maxWidth={700}
  onClose={[Function]}
>
  <EuiModalHeader>
    <EuiModalHeaderTitle
      component="h3"
    >
      Custom Icon
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiFlexGroup
      alignItems="flexStart"
      gutterSize="m"
      justifyContent="spaceBetween"
    >
      <EuiFlexItem
        className="mapsCustomIconForm"
        grow={2}
      >
        <EuiFormRow
          className="mapsCustomIconForm__image"
          display="rowCompressed"
          error=""
          helpText="SVGs without sharp corners and intricate details work best. Modifying the settings under Advanced options may improve rendering."
          isInvalid={false}
        >
          <EuiFilePickerClass
            accept=".svg"
            className="mapsImageUpload"
            initialPromptText="Select or drag and drop an SVG icon"
            isInvalid={false}
            onChange={[Function]}
            required={true}
          />
        </EuiFormRow>
        <EuiSpacer />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiFlexGroup
      justifyContent="flexEnd"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButtonEmpty
          onClick={[Function]}
        >
          Cancel
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="mapsCustomIconForm-submit"
          fill={true}
          isDisabled={true}
          onClick={[Function]}
        >
          Save
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalFooter>
</EuiModal>
`;
